webapp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP
  selector:
    app: flasknew
  ports:
    - port: 80
      targetPort: 5000
